--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Migot",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
+    "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "hint": "^7.1.8",
     "html-webpack-plugin": "^5.5.1",
