--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "test": "jest --coverage --env=jsdom"
   },
   "keywords": [],
   "author": "Migot",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.8.1",
@@ -21,6 +23,8 @@
     "font-awesome": "^4.7.0",
     "hint": "^7.1.8",
     "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "style-loader": "^3.3.3",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -31,6 +35,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0"
   }
 }
